# voyager-verifier

./: .gitignore  .typos.toml  .voyager.toml.example  CHANGELOG.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: deploy-docs.yml  package.yml  release.yml
docs/: README.md  book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: README.md  ci-cd.md  custom-endpoints.md  lock-files.md  notifications.md  output-formats.md  test-files.md
docs/src/commands/: README.md  check.md  history.md  status.md  verify.md
docs/src/configuration/: README.md  cli-options.md  config-file.md  examples.md  workspace.md
docs/src/contributing/: README.md  documentation.md
docs/src/examples/: README.md  ci-pipeline.md  dojo-project.md  multi-contract.md  simple-contract.md  workspace-project.md
docs/src/getting-started/: README.md  asdf.md  cargo.md  quickstart.md  requirements.md
docs/src/history/: README.md  cleanup.md  filtering.md  listing.md  recheck.md  statistics.md  tracking.md
docs/src/reference/: README.md  api.md  error-codes.md  file-collection.md  supported-versions.md
docs/src/troubleshooting/: README.md  common-errors.md  debugging.md  support.md  verbose-mode.md
docs/src/verification/: README.md  batch-verification.md  command-line.md  dry-run.md  interactive-wizard.md  watch-mode.md
src/: args.rs  config.rs  errors.rs  file_collector.rs  history.rs  lib.rs  main.rs  project.rs  status_output.rs  verification.rs  wizard.rs
src/api/: client.rs  errors.rs  mod.rs  models.rs  types.rs
src/cli/: args.rs  config.rs  mod.rs  wizard.rs
src/cli/commands/: check.rs  history.rs  mod.rs  (+2 more)
src/core/: class_hash.rs  mod.rs  project.rs  verification.rs
src/filesystem/: collector.rs  mod.rs  resolver.rs
src/output/: mod.rs  notifications.rs  status.rs
src/storage/: history.rs
src/utils/: errors.rs  license.rs  mod.rs  voyager.rs
tests/: error_message_tests.rs  integration_tests.rs
