[package]
authors = ["Nethermind"]
description = "Contract class verification tool that allows you to verify your starknet classes on a block explorer."
license = "Apache-2.0"
name = "voyager-verifier"
repository = "https://github.com/NethermindEth/voyager-verifier"
version = "2.2.0"
default-run = "voyager"
edition = "2021"
keywords = ["starknet", "verification", "smart-contracts", "ethereum"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
]

[package.metadata.cargo-package-metadata]
ignored-files = [
    "Cargo.lock",
    "Cargo.toml.orig",
    ".cargo_vcs_info.json",
    ".github/",
    "examples/",
    "Dockerfile",
    "Makefile",
    ".cargo/",
    "rust-toolchain",
    ".gitignore",
]

[dependencies]
anyhow = "1.0"
backon = { version = "1.6", default-features = false, features = ["std-blocking-sleep"] }
camino = { version = "1.2", features = ["serde1"] }
clap = { version = "4.5", features = ["derive", "unicode", "env", "string"] }
env_logger = "0.11"
itertools = "0.14"
log = "0.4"
regex = "1"
lazy_static = "1.5"
reqwest = { version = "0.12", features = ["blocking", "json", "native-tls-vendored"] }
scarb-metadata = "1.15"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.20"
spdx = "0.10"
thiserror = "2.0"
toml = "0.8"
url = "2.5"
walkdir = "2.5"
colored = "3.0.0"
chrono = "0.4"
dialoguer = "0.11.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
dirs = "5.0"
notify-rust = { version = "4.11", optional = true }

[features]
default = ["notifications"]
notifications = ["notify-rust"]

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.23.0"
tokio-test = "0.4.4"
assert_fs = "1.1.3"
predicates = "3.1.3"

[lib]
name = "verifier"


[[bin]]
name = "voyager"
path = "src/main.rs"
